Changed the url to nestegg to point to the forked repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://Benjamin.M.Schwartz@code.google.com/r/benjaminmschwartz-libvpx-emscripten/
 [submodule "vp8/nestegg"]
 	path = vp8/nestegg
-	url = git@github.com:bemasc/nestegg.git
+	url = git@github.com:AlbertoPL/nestegg.git
